[metadata]
name = branchnews
version = attr: branchnews.__version__
license = MIT
url = https://github.com/skieffer/branchnews
description = Branch-based fragment file names for towncrier
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    click
    towncrier>=23.11.0

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    branchnews = branchnews:cli

[options.extras_require]
dev =
    pytest
    build
    twine
    invoke
